@@ -15,6 +15,7 @@ cm4all-beng-proxy (0.6.24) unstable; urgency=low
   * translate, http-client, ajp-client, cgi, http-cache: verify the HTTP
     response status
   * prototypes/translate.py: disallow "/../" and null bytes
+  * uri-parser: strict RFC 2396 URI verification
   * allow 8192 connections by default
   * allow 65536 file handles by default
 
